--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Okta iFrame Test Page
 </head>
 <body>
 
-<iframe src="https://d1.login.intl.cigna.com/account-settings/security?iframe=true&iframeControlHideAll=true" width="800" height="800" />
+<a href="https://d1.login.intl.cigna.com/account-settings/security?iframe=true&iframeControlHideAll=true" width="800" height="800">End User Settings</a>
 
 </body>
 </html>
