--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<iframe src="https://d1.login.intl.cigna.com/account-settings/security?iframe=true&iframeControlHideAll=true" width="800" height="800" />
+<iframe src="https://d1-intlcigna.oktapreview.com/account-settings/security?iframe=true&iframeControlHideAll=true" width="800" height="800" />
 
 </body>
 </html>
